<resources>
    <string name="app_name">Inventory Manager</string>
    <string name="empty_view_title_text">Your inventory is empty</string>
    <string name="empty_view_subtitle_text">Press the + button to add items</string>
    <string name="sale_button_text">Sale</string>
    <string name="inventory_item">Inventory Item</string>
    <string name="hint_item_name">Item Name</string>
    <string name="hint_item_price">Item Price</string>
    <string name="hint_item_quantity">Item Quantity</string>
    <string name="no_image">No Image Found</string>
    <string name="action_insert_dummy_data">Insert Dummy Data</string>
    <string name="action_delete_all_entries">Delete All Games</string>
    <string name="action_save">Save</string>
    <string name="action_delete">Delete</string>
    <string name="delete_all_dialog_msg">Are you sure you want to delete all games from the inventory?</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="game_delete_all_successful">All games deleted from inventory</string>
    <string name="add_game">Add a Game</string>
    <string name="edit_game">Edit a Game</string>
    <string name="hint_item_image_url">Image URL</string>
    <string name="hint_item_supplier_phone">Supplier Phone Number</string>
    <string name="order_more">Order More</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_update_game_failed">Please fill out all of the required fields.</string>
    <string name="game_insert_failed">Game insert failed</string>
    <string name="game_insert_successful">Game insert successful</string>
    <string name="delete_dialog_msg">Delete this game?</string>
    <string name="editor_delete_game_failed">Error deleting game</string>
    <string name="editor_delete_game_successful">Game deleted</string>
    <string name="editor_update_game_successful">Game update successful</string>
    <string name="game_name">Name:</string>
    <string name="game_price">Price:</string>
    <string name="game_quantity">Quantity:</string>
    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="url_not_valid">Supplier URL given is not valid</string>
    <string name="phone_number_not_valid">Supplier phone number is not valid</string>
    <string name="image_url_empty">Please add a valid image url</string>
</resources>
